--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -46,6 +46,13 @@ body{
             flex-basis: 83.333333%;
         }
     }
+    & .socIcons{
+        display: flex;
+        justify-content: flex-end;
+        @media (max-width: 800px){
+            display: block;
+        }
+    }
 }
 .home{
     display: flex;
@@ -55,28 +62,88 @@ body{
         background-color: #fff;
         margin-bottom: 50;
         height: 50;
+        & .activeCat{
+            background-color: $colorMain;
+            padding: 4px 8px;
+            border-radius: 5px;
+            color: #fff;
+            & span, a{
+                color: #fff!important;
+            }
+        }
+        & .activeCatTest{
+            scroll-snap-align: center;
+            scroll-snap-stop: always;
+        }
+        & .scrollCat{
+            margin-top: 50; 
+            display: flex;
+            flex-direction: row;
+            overflow: scroll;
+            position: fixed;
+            background-color: #fff;
+            z-index: 1;
+            width: 100%;
+            &::-webkit-scrollbar{
+            	display: none;
+            }
+            & > a:first-child{
+                margin-left: 10;
+            }
+            & a{
+                width: max-content;
+                display: flex;
+                padding: 6px 10px; 
+                white-space: nowrap;
+            }
+        }
     }
     & .sub_header{
         min-height: 50;
         height: 50;
-    }
-    & .sub_header > div{
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        & .thisCity{
+            color: #878787;
+            @include fons(1.3rem, $Ubuntu);
+            display: flex;
+            align-items: center;
+        }
+        & .CityProfileNav{
+            display: flex;
+            flex-direction: column;
+            margin-right: 15px!important;
+            & > span{
+                @include fons(1rem, $Ubuntu);
+            }
+        }
+        & > div{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        & img{
+            height: 40px;
+        }
+        & .ShopIconBTN{
+            & .MuiBadge-anchorOriginTopRightRectangle{
+                right: -10px!important;
+            }
+            & svg{
+                fill: $colorMain;
+            }
+        } 
     }
     & .cat{
         @include fons(1rem, $Ubuntu);
         cursor: pointer;
         color: #000;
         text-decoration: none;
+        @media (min-width: 1280px) {
+            font-size: 1.05vw!important;
+        }
     }
     & .catLink{
         text-decoration: none;
         white-space: nowrap;
-    }
-    & .sub_header img{
-        height: 40px;
     }
 }
 .MuiButtonGroup-groupedContainedHorizontal:not(:last-child){
@@ -93,12 +160,6 @@ body{
     &:hover{
         background-color: #fff!important;
     }
-}
-.CardAction{
-    flex-direction: column;
-    align-items: end!important;
-    padding: 1.2vw!important;
-    width: calc(100% - 2.4vw);
 }
 .BtnBorder{
     border: 2px solid $colorMain;
@@ -123,100 +184,86 @@ body{
 .BtnBorderWOBorder svg{
     fill: $colorMain;
 }
-.activeCat{
-    background-color: $colorMain;
-    padding: 4px 8px;
-    border-radius: 5px;
-    color: #fff;
-    & span, a{
-        color: #fff!important;
-    }
-}
-.activeCatTest{
-    scroll-snap-align: center;
-    scroll-snap-stop: always;
-}
-.proximity{
-    scroll-snap-type: none;
+.MuiBadge-colorPrimary{
+    background-color: $colorMain!important;
 }
 .mandatory{
     scroll-snap-type: x mandatory;
 }
-.TableMini{
-    width: inherit;
-    & tbody{
-        overflow-y: scroll;
-        overflow-x: hidden;
-        height: 200px;
-        display: table-caption;
-        width: 100%;
-        border-bottom: 1px solid #e5e5e5;
+#simple-popover{
+    & .DescPromo{
+        width: 393;
+        padding-top: 15;
+        & span{
+            @include fons(0.8rem, $Ubuntu);
+        }
     }
-}
-.ShopIconBTN svg{
-    fill: $colorMain;
-}
-.SpacePromo{
-    padding: 2px 4px;
-    display: flex;
-    align-items: center;
-    height: 34;
-    width: 390;
-    & > div{
-        margin-left: 8;
-        flex: 1;
-    }
-    & hr{
-        height: 28;
-        margin: 4;
-    }
-    & svg{
-        fill: $colorMain;
-    }
-    & input{
-        @include fons(1rem, $Ubuntu);
-    }
-}
-.DescPromo{
-    width: 393;
-    padding-top: 15;
-    & span{
-        @include fons(0.8rem, $Ubuntu);
-    }
-}
-.InCart{
-    width: 393; 
-    padding-top: 15; 
-    display: flex;
-    justify-content: flex-end;
-    & span{
-        @include fons(1rem, $Ubuntu);
-    }
-    & button{
-        width: 100%;
-    }
-}
-.TableMini{
-    & .TableMiniName{
-        width: 40%;
-        @include fons(1rem, $Ubuntu);
-    }
-    & .TableMiniPrice{
-        text-align: center;
-        @include fons(1rem, $Ubuntu);
+    & .InCart{
+        width: 393; 
+        padding-top: 15; 
         display: flex;
         justify-content: flex-end;
+        & span{
+            @include fons(0.875rem, $Ubuntu);
+        }
+        & button{
+            width: 100%;
+        }
     }
-    & .TableMiniFullName{
-        @include fons(1rem, $Ubuntu);
-        width: 70%;
+    & .TableMini{
+        width: inherit;
+        & tbody{
+            overflow-y: scroll;
+            overflow-x: hidden;
+            height: 200px;
+            display: table-caption;
+            width: 100%;
+            border-bottom: 1px solid #e5e5e5;
+        }
+        & .TableMiniName{
+            width: 40%;
+            @include fons(1rem, $Ubuntu);
+        }
+        & .TableMiniPrice{
+            text-align: center;
+            @include fons(1rem, $Ubuntu);
+            display: flex;
+            justify-content: flex-end;
+        }
+        & .TableMiniFullName{
+            @include fons(1rem, $Ubuntu);
+            width: 70%;
+        }
+        & .TableMiniFullPrice{
+            @include fons(1rem, $Ubuntu);
+            width: 40%;
+            text-align: center;
+        }
     }
-    & .TableMiniFullPrice{
-        @include fons(1rem, $Ubuntu);
-        width: 40%;
-        text-align: center;
+    & .SpacePromo{
+        padding: 2px 4px;
+        display: flex;
+        align-items: center;
+        height: 34;
+        width: 390;
+        & > div{
+            margin-left: 8;
+            flex: 1;
+        }
+        & hr{
+            height: 28;
+            margin: 4;
+        }
+        & svg{
+            fill: $colorMain;
+        }
+        & input{
+            @include fons(1rem, $Ubuntu);
+        }
     }
-} 
+}
+
+ 
 @media (min-width: 1280px){
     .mainContainer.MuiGrid-grid-lg-10, .mainContainer.MuiGrid-grid-xs-10 {
         margin-left: 8.35%!important;
@@ -233,42 +280,18 @@ body{
         margin-left: 16.66665%!important;
     }
 }
-.socIcons{
-    display: flex;
-    justify-content: flex-end;
-}
-@media (max-width: 800px){
-    .socIcons{
-        display: block;
-    }
-}
+
 .mainContainer.MuiGrid-spacing-xs-3{
     margin: 0;
 }
 .dis_none{
     display: none!important;
 }
-.InputMask{
-    border: 1px solid #000;
-    border-radius: 4px;
-    @include fons(1.1rem, $Ubuntu);
-    letter-spacing: 0.6px;
-    padding: 9px 15px 9px 15px;
-    &:focus{
-        outline: inherit!important;
-    }
-}
-.ModalAuth .MuiDialogTitle-root, .ModalCity .MuiDialogTitle-root {
-    text-align: center;
-}
-.ModalAuth .MuiDialogTitle-root h2, .ModalCity .MuiDialogTitle-root h2{
-    @include fons(1.8rem, $Ubuntu);
-}
-.ModalAuth .ModalContent_1_1, .ModalAuth .ModalContent_1_2, .ModalCity .ModalContent_1_1{
-    display: flex;
-    flex-direction: column;
-}
 .ModalAuth{
+    & .ModalContent_1_1, .ModalContent_1_2{
+        display: flex;
+        flex-direction: column;
+    }
     & .ModalContent_1_3{
         margin-top: 30;
         display: flex; 
@@ -286,6 +309,22 @@ body{
         color: $colorMain;
         border-bottom: 1px dotted $colorMain;
     }
+    & .InputMask{
+        border: 1px solid #000;
+        border-radius: 4px;
+        @include fons(1.1rem, $Ubuntu);
+        letter-spacing: 0.6px;
+        padding: 9px 15px 9px 15px;
+        &:focus{
+            outline: inherit!important;
+        }
+    }
+    & .MuiDialogTitle-root{
+        text-align: center;
+        & h2{
+            @include fons(1.8rem, $Ubuntu);
+        }
+    }
 }
 .ModalCity{
     & .ModalLabel{
@@ -301,52 +340,47 @@ body{
             color: #fff;
         }
     }
+    & .MuiDialogTitle-root {
+        text-align: center;
+        & h2{
+            @include fons(1.8rem, $Ubuntu);
+        }
+    }
+    & .ModalContent_1_1{
+        display: flex;
+        flex-direction: column;
+    }
 }
-.MuiButtonBase-root {
-    color: inherit;
-    border: 0;
-    cursor: pointer;
-    margin: 0;
-    display: inline-flex;
-    outline: 0;
-    padding: 0;
-    position: relative;
-    align-items: center;
-    user-select: none;
-    border-radius: 0;
-    vertical-align: middle;
-    -moz-appearance: none;
+.bottomNavigate{
+    position: fixed;
+    bottom: 0; 
+    width: 100%;
+    height: 45; 
+    display: flex;
     justify-content: center;
-    text-decoration: none;
-    background-color: transparent;
-    -webkit-appearance: none;
-    -webkit-tap-highlight-color: transparent;
-}
-.scrollCat{
-    &::-webkit-scrollbar{
-    	display: none;
-    }
-    & > a:first-child{
-        margin-left: 10;
-    }
-}
-.MuiBadge-colorPrimary{
-    background-color: $colorMain!important;
-}
-.MuiBadge-anchorOriginTopRightRectangle{
-    right: -10px!important;
-}
-.thisCity{
-    color: #878787;
-    @include fons(1.3rem, $Ubuntu);
-    display: flex;
-    align-items: center;
-}
-.CityProfileNav{
-    display: flex;
-    flex-direction: column;
-    margin-right: 15px!important;
-    & > span{
-        @include fons(1rem, $Ubuntu);
+    background-color: #fff;
+    & .MuiButtonBase-root {
+        flex: 1;
+        color: inherit;
+        border: 0;
+        cursor: pointer;
+        margin: 0;
+        display: inline-flex;
+        outline: 0;
+        padding: 0;
+        position: relative;
+        align-items: center;
+        user-select: none;
+        border-radius: 0;
+        vertical-align: middle;
+        -moz-appearance: none;
+        justify-content: center;
+        text-decoration: none;
+        background-color: transparent;
+        -webkit-appearance: none;
+        -webkit-tap-highlight-color: transparent;
+        & svg{
+            font-size: 1.7rem;
+        }
     }
 }
