--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -34,6 +34,7 @@ $Futuris: 'Futuris Bold';
     & .ItemPrice{
         display: flex;
         align-items: flex-end;
+        font-size: 1.4rem!important;
         & svg{
             padding-bottom: 1px;
         }
